feat(dashboard): add dashboard for manager and secretary
